compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__pattern_match_on_argument_uses_case_with_multiple_constructors.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "\npub type CannotBeDestructured {\n  One(one: String)\n  Two(two: Int)\n}\n\npub fn main(arg: CannotBeDestructured) {\n  todo\n}\n"
---
----- BEFORE ACTION

pub type CannotBeDestructured {
  One(one: String)
  Two(two: Int)
}

pub fn main(arg: CannotBeDestructured) {
            ↑                           
  todo
}


----- AFTER ACTION

pub type CannotBeDestructured {
  One(one: String)
  Two(two: Int)
}

pub fn main(arg: CannotBeDestructured) {
  case arg {
    One(one:) -> todo
    Two(two:) -> todo
  }
  todo
}
