compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__qualified_to_unqualified_aliased_type.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "\nimport wobble\n\npub fn main(x) -> wobble.Wibble(a) {\n    todo\n}\n"
---
----- BEFORE ACTION

import wobble

pub fn main(x) -> wobble.Wibble(a) {
                  ▔▔▔▔▔▔▔↑          
    todo
}


----- AFTER ACTION

import wobble.{type Wibble}

pub fn main(x) -> Wibble(a) {
    todo
}
