compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__qualified_to_unqualified_import_constructor_constructor_name_exists.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "\nimport option.{Some}\nimport opt\n\npub fn main() -> option.Option(opt.Option(Int)) {\n    Some(opt.Some(1))\n}\n"
---
----- BEFORE ACTION

import option.{Some}
import opt

pub fn main() -> option.Option(opt.Option(Int)) {
                               ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔
    Some(opt.Some(1))
▔▔▔▔▔▔▔▔▔▔▔▔↑        
}


----- AFTER ACTION

import option.{Some}
import opt.{Some}

pub fn main() -> option.Option(opt.Option(Int)) {
    Some(Some(1))
}
