compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__qualified_to_unqualified_import_function.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "\nimport result\n\npub fn main() {\n  result.is_ok()\n}\n"
---
----- BEFORE ACTION

import result

pub fn main() {
           ↑   
  result.is_ok()
}


----- AFTER ACTION

import result.{is_ok}

pub fn main() {
  is_ok()
}
